# tech_introduction

./: README.md  my_own_gpt.py  pyproject.toml  requirements.txt  write_to_txt.py
BartekOkon/: write_to_txt.py
BartekOkon/output/: okon.txt
Julia/: write_to_txt.py
Julia/output/: julka_k.txt
MaciejP/: write_to_txt.py
MaciejP/output/: gdraus.txt
Marek/: write_to_txt.py
Marek/output/: tescik.txt
Martynaaa/: write_to_txt.py
Martynaaa/output/: zmieniam_nazwe.txt
MichalW/: write_to_txt.py
MichalW/output/: mw.txt
damiankob/: write_to_txt.py
damiankob/output/: daniel_k.txt
damste/: write_to_txt.py
damste/output/: daniel_k.txt
filip/: write_to_txt.py
filip/output/: 123.txt
folder_w/: write_to_txt.py
folder_w/output/: idk.txt
karolajna/: write_to_txt.py
karolajna/output/: karolajna.txt
olakopi/: write_to_txt.py
olakopi/output/: olak.txt
output/: daniel_k.md
test/: write_to_txt.py
testest/output/: test.txt
twoja_stara_kasztan/: wrire_to_txt.py
twoja_stara_kasztan/output/: kacper_sowa.txt
